--- a/links0.html
+++ b/links0.html
@@ -5,6 +5,6 @@
     <title>My web page!</title>
   </head>
   <body>
-    Hello, world! Hello again! hi again!
+    <a href="hello.html">Click here!</a>
   </body>
 </html>
